# smart-commit

./: .gitignore  CLAUDE-v2.md  CLAUDE.md  README.md  UPCOMING.md  debug_parsing.py  final_test.py  install.py  pyproject.toml  setup  smart-commit.sh  test_fix.py  verify_fix.py
deprecated/: setup  smart-commit.sh
smart_commit/: __init__.py  cli.py  core.py
smart_commit/ai_backends/: __init__.py  base.py  factory.py  llamacpp.py  ollama.py
smart_commit/config/: settings.py
smart_commit/git_ops/: __init__.py  repository.py
smart_commit/ui/: console.py
smart_commit/utils/: message_extractor.py  prompts.py  scope_cache.py  security.py
